[complete] moveDeck() 구현 완료